--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>Climate change-world's biggest crisis</title>
-    <link rel = "icon" href = "#"
+    <link rel = "icon" href = "logo.png"
           type = "image/x-icon">
     <body>
         <img src="bg.jpg" width="1575" height="600"></img>
